--- a/RepeatAssessment2024/Page2.html
+++ b/RepeatAssessment2024/Page2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, intial scale=1.0">
     <title> Learning Tips </title>
-    <link rel="stylesheet" href="Repeat AssessmentPage2.css">
+    <link rel="stylesheet" href="Page2.css">
 <!-- Bootstrap to help structure the homepage -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -24,22 +24,24 @@
         </div>
     </div>
     <div class="container fluid"></div>
-    <!-- div for the navigation bar between pages in the top of the homepage, same as page 1 -->
+    <!-- div for the navigation bar between pages in the top of the homepage -->
     <ul class="nav">
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="Repeat Assessment.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="Index.html">Home</a>
         </li>
         <li class="class-item">
              
-            <a class="nav-link active"aria-current="page" href="RepeatAssessmentPage2.html">Learning Styles</a>
+            <a class="nav-link active"aria-current="page" href="Page2.html">Learning Styles</a>
         </li>
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="RepeatAssessmentPage3.html">Time Management</a>
+            <a class="nav-link active" aria-current="page" href="Page3.html">Time Management</a>
         </li>
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="RepeatAssessmentPage4.html">Minigame</a>
+            <a class="nav-link active" aria-current="page" href="Page4.html">Minigame</a>
         </li>
     </ul>
+
+</body>
 <!-- Brief title with opening message-->
     <div class="text-center">
         <div class="col-sm-12">
