--- a/RepeatAssessment2024/page4.html
+++ b/RepeatAssessment2024/page4.html
@@ -27,17 +27,17 @@
     <!-- div for the navigation bar between pages in the top of the homepage -->
     <ul class="nav">
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="Index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="class-item">
              
-            <a class="nav-link active"aria-current="page" href="Page2.html">Learning Styles</a>
+            <a class="nav-link active"aria-current="page" href="page2.html">Learning Styles</a>
         </li>
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="Page3.html">Time Management</a>
+            <a class="nav-link active" aria-current="page" href="page3.html">Time Management</a>
         </li>
         <li class="class-item">
-            <a class="nav-link active" aria-current="page" href="Page4.html">Minigame</a>
+            <a class="nav-link active" aria-current="page" href="page4.html">Minigame</a>
         </li>
     </ul>
 
