--- a/RepeatAssessment2024/page2.html
+++ b/RepeatAssessment2024/page2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, intial scale=1.0">
     <title> Learning Tips </title>
-    <link rel="stylesheet" href="css/Page2.css">
+    <link rel="stylesheet" href="css/page2.css">
 <!-- Bootstrap to help structure the homepage -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
