--- a/RepeatAssessment2024/index.html
+++ b/RepeatAssessment2024/index.html
@@ -18,7 +18,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h1 class="card-title">Learning Tips</h5>
-                        <img src="Learning.jpg" alt="">
+                        <img src="Images/Learning.jpg" alt="">
                 <h5 class="card-body">A guide to excel in anything you wish to learn</h5>
                 
                     </div>
