--- a/RepeatAssessment2024/page4.html
+++ b/RepeatAssessment2024/page4.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h1 class="card-title">Learning Tips</h5>
                         <h5 class="card-body">Stress relief with a little minigame!</h5>
-                        <img src="Learning4.jpg" alt="">
+                        <img src="Images/Learning4.jpg" alt="">
                     </div>
             </div>
         </div>
