Removing template text

--- a/page2.html
+++ b/page2.html
@@ -45,15 +45,13 @@
 <!-- Brief title with opening message-->
     <div class="text-center">
         <div class="col-sm-12">
-            <h3>What are the four learning styles?</h3>
-            <p>The notion that everyone has their own learning style became popular in the 1970s.
-                 It's an attractive thought: if each of us could identify one, "ideal" approach to learning,
-                  we'd be able to focus on it – and be consistently successful.</p>
+            <h3>What are learning styles?</h3>
+            <p>The most important thing to know before studying or daily learning is that everyone learns in different ways and knowing
+                what your preferred learning style is going to massively boost your capability to learn and help you remember what you revise</p>
 
-            <p>What's more, by understanding other people's needs, we'd know how best to support them to learn.
-                It could revolutionize education, training and L&D, and help all of us to reach our full potential as learners.</p>
+		 <p>This page is going to go over the different learning styles and how to put them into practice.</p>
 
-            <h5>The four core learning styles include visual, auditory, reading and writing, and kinesthetic.
+		 <h5>The four core learning styles are visual, auditory, reading and writing, and kinesthetic.
                  Here’s an overview of all four learning style types.</h5>
         </div>
     </div>
@@ -68,31 +66,33 @@
         </div>
     </div>
 
-    <p id="p1"> Visual - Visual learners are better able to retain information when it’s presented to them in a graphic depiction, such as arrows, charts, diagrams, symbols, and more.
-         Similar to how designers use visual hierarchy to emphasize specific design elements, visual learners thrive with clear pictures of information hierarchy</p>
+    <p> Visual learners find learning easier through the use of visual aids such as examples your teacher would draw up on the board,
+         or their own visual aids such as flowcharts or diagrams. These visual aids help retain the information for longer and revise
+          easily so if you think this might appeal to your learning style, give it a shot! </p>
 <hr>
     <div class="row">
         <div class="col-sm-4">
             <h3>Auditory</h3>
         </div>
     </div>
-    <p>Auditory - Sometimes referred to as “aural” learners, auditory learners prefer listening to information that is presented to them vocally.
-         These learners work well in group settings where vocal collaboration is present and may enjoy reading aloud to themselves, too.</p>
+    <p>Auditory learners need to hear topics they're learning vocally through their teachers, they also may benefit from discussing the topic with fellow students.
+        Auditory learners wont exactly learn from taking down notes or using diagrams and flowcharts, but it could still be beneficial to do so and then
+        read it back to yourself again and again.</p>
 <hr>
     <div class="row">
         <div class="col-sm-4">
              <h3>Reading and Writing</h3>
         </div>
     </div>
-    <p>Reading & Writing - Focusing on the written word, reading and writing learners succeed with written information on worksheets, presentations, and other text-heavy resources.
-         These learners are note-takers and perform strongly when they can reference written text.</p>
+    <p>Reading and Writing learners are the people that benefit most from taking down notes. everything covered in class that they note down is already retained,
+        and when they revise it later, their understanding only gets stronger. Highlighters are their best friend as they will highlight the most important notes for them to revise.</p>
 <hr>
     <div class="row">
          <div class="col-sm-4">
              <h3>Kinesthetic</h3>
         </div>
     </div>
-    <p>Kinesthetic - Taking a physically active role, kinesthetic learners are hands-on and thrive when engaging all of their senses during course work.
-         These learners tend to work well in scientific studies due to the hands-on lab component of the course.</p>
+    <p>Kinesthetic learners truly learn when putting the topic they're learning into action. They benefit from the likes of exam questions and in class work as they learn 
+        best getting to use their topic practically.</p>
 
          </html>
