--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h1 class="card-title">Learning Tips</h5>
                         <h5 class="card-body">Learning Styles and identifying what style suits you</h5>
-                        <img src="Learning2.jpg" alt="">
+                        <img src="Images/Learning2.jpg" alt="">
                     </div>
             </div>
         </div>
