--- a/page3.html
+++ b/page3.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h1 class="card-title">Learning Tips</h5>
                         <h5 class="card-body">Time Management and how to deal with Stress</h5>
-                        <img src="Learning3.jpg" alt="">
+                        <img src="Images/Learning3.jpg" alt="">
                     </div>
             </div>
         </div>
